--- a/webd/mario-kart/index.html
+++ b/webd/mario-kart/index.html
@@ -10,7 +10,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Mario Kart</title>
+    <title>Mario Kart ilu</title>
     <link
       rel="stylesheet"
       href="style.css"
